# todo-backend-fastapi

./: .gitignore  LICENSE  README.md  example-env  main.env  pyproject.toml  ruff.toml
backend/: .dockerignore  Dockerfile  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
backend/api/endpoints/v1/: api_v1.py  tasks.py  users.py
backend/core/: base.py
backend/core/admin/: admin_view.py  auth.py
backend/core/constants/: ai_services.py  tasks.py  users.py
backend/db/: database.py  db_manager.py
backend/dependencies/: db_manager.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 1c5f6081ed72_prompt_model.py  205c69583ad9_del_is_dayli.py  3dbfca14da4a_prompt_model.py  5afd6169c478_add_user_lang.py  7e7261037ebf_prompt_model.py  b41e31a111db_init_migrations.py
backend/models/: prompts.py  tasks.py  users.py
backend/repositories/: auth.py  base.py  prompts.py  tasks.py  users.py
backend/schemas/: ai_requests.py  tasks.py  tokens.py  users.py
backend/services/: base.py  tasks.py  users.py
backend/services/ai/: ai_service.py  clients.py  utils.py
backend/services/auth/: auth.py  security.py  tokens.py
backend/static/prompts/: system_prompt.md
backend/tests/: conftest.py  test_tasks_api.py
backend/tests/fixtures/: tasks.py  users.py
frontend/: config.py  pyproject.toml  rxconfig.py
frontend/todo_app/: routes.py  todo_app.py
frontend/todo_app/auth/: state.py  views.py
frontend/todo_app/models/: users.py
frontend/todo_app/tasks/: state.py
infra/: docker-compose.yml
src/: config.py  config_base.py  main.py  pyproject.toml
src/api/: api_v1.py  dependecies.py  services.py
src/api/endpoints/v1/: api_v1.py  tasks.py  users.py
src/api/routes/: tasks.py  users.py
src/auth/: repository.py  schemas.py  services.py  tokens.py
src/backend/: config.py  database.py  main.py  ruff.toml
src/backend/api/: dependecies.py  services.py
src/backend/api/routes/: tasks.py  users.py
src/backend/auth/: repository.py  schemas.py  security.py  services.py  tokens.py
src/backend/core/: base.py  config.py  constants.py  exceptions.py  logging.py  messages.py
src/backend/db/: database.py  db_manager.py  repository.py
src/backend/migrations/: env.py
src/backend/tasks/: constants.py  dependecies.py  messages.py  models.py  repository.py  routes.py  schemas.py  services.py
src/backend/tests/: conftest.py
src/backend/tests/fixtures/: users.py
src/backend/users/: constants.py  models.py  repository.py  routes.py  schemas.py  service.py  services.py
src/core/: base.py  config_base.py  constants.py  exceptions.py
src/core/admin/: admin_view.py  auth.py
src/core/constants/: core.py
src/db/: database.py  db_manager.py  repository.py
src/dependecies/: db_maneger.py  users.py
src/dependencies/: users.py
src/migrations/: env.py
src/migrations/versions/: 5afd6169c478_add_user_lang.py
src/models/: prompts.py  tasks.py  users.py
src/repositories/: auth.py  base.py  prompts.py  tasks.py  users.py
src/schemas/: ai_requests.py  tasks.py  tokens.py  users.py
src/services/: base.py  tasks.py  users.py
src/services/ai/: ai_service.py  utils.py
src/services/auth/: auth.py  security.py  tokens.py
src/static/prompts/: system_prompt.md
src/tasks/: models.py  repository.py  schemas.py  services.py
src/tests/: conftest.py  test_users_api.py
src/tests/fixtures/: tasks.py  users.py
src/tg_bot/: config.py
src/users/: constants.py  models.py  repository.py  schemas.py  services.py
