[project]
name = "todo-app-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Shirokov", email = "ilshi2904@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
readme = "README.md"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pytest-lazy-fixtures (>=1.4.0,<2.0.0)",
    "faker (>=40.8.0,<41.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"