[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Shirokov",email = "ilshi2904@gmail.com"}
]
requires-python = "<4.0.0,>=3.12.0"
dependencies = [
    "fastapi[all] (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "cryptography (>=46.0.6,<47.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqladmin (>=0.24.0,<0.25.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
