[project]
name = "todo-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Shirokov",email = "ilshi2904@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "reflex (>=0.8.28.post1,<0.9.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
